# fence-agents

./: configure.ac
fence/agents/dli_pc8000/: Makefile.am  fence_dli_pc8000.py
fence/agents/ipal/: Makefile.am  fence_ipal  ipal
